<resources>
    <string name="app_name">TaniKami_XML</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="article">Article</string>
    <string name="detection">Detection</string>
    <string name="main_ver">Tani Kami ver 1.0.0</string>
    <string name="description_main">TaniKami is created to help farmer to sell their harvest directly to customer in another area even in bountiful harvest season.</string>
    <string name="welcome">Welcome to TaniKami</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_words">Sign Up now, and start buy and sell as you like.</string>
    <string name="for_sign_in">Already have an Account ?</string>
    <string name="to_sign_in">Sign In</string>
    <string name="for_profile_image">Insert photo profile</string>
    <string name="profile_image">Image for profile</string>
    <string name="gender">Select Gender</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_words">Login now and sell your harvest quickly \nbefore product price go down.</string>
    <string name="for_sign_up">Don’t have an Account ?</string>
    <string name="to_sign_up">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_age">Age</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="purchase_history">Purchase History</string>
    <string name="sales_history">Sales History</string>
    <string name="detection_title">Plant Disease \nDetection</string>
    <string name="bill_image">Bill Image</string>
    <string name="plant_image">Plant Image</string>
    <string name="upload_transfer_bill">Upload Transfer Bill</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="products_image">Products Image</string>
    <string name="products_name">Name of product to sell</string>
    <string name="products_description">Products Description</string>
    <string name="products_description_value">Products Description Value</string>
    <string name="products_stock">Stock : %d %s</string>
    <string name="products_price">Price : %s / %s</string>
    <string name="products_rating">Rating Product</string>
    <string name="products_amount">Amount To Buy</string>
    <string name="buy">Buy</string>
    <string name="hint_amount">Fill the anount of product you want to buy</string>
    <string name="sold_out">Stock Empty</string>
    <string name="fab">Adding new product to sell</string>
    <string name="fab_edit">Edit Product</string>
    <string name="fab_rating_products">Edit Product</string>
    <string name="article_image">Article Image</string>
    <string name="article_title">Article Title</string>
    <string name="article_body">Article Body</string>
    <string name="article_author">Article Author</string>
    <string name="add_product">Add product you want to sell</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="bank_name">Your\'s Bank Name</string>
    <string name="bank_account_number">Your\'s bank account number</string>
    <string name="id_ktp">Your Card Identity Number(id KTP)</string>
    <string name="stock">%d / %s </string>
    <string name="stock_size">Stock Size</string>
    <string name="product_price">Rp %d \\ Rp %s</string>
    <string name="product_description">Product Description</string>
    <string name="done">Done</string>
    <string name="product_name_confirm">Product Name :</string>
    <string name="product_stock_confirm">Product Stock :</string>
    <string name="product_price_confirm">Price :</string>
    <string name="bank_name_confirm">Bank Name :</string>
    <string name="account_number_confirm">Acc. Number :</string>
    <string name="sell">Sell</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="cost_details_title">Cost Details</string>
    <string name="tax">Tax(2%)</string>
    <string name="admin">Admin</string>
    <string name="admin_cost">Rp. 2,000</string>
    <string name="total">Total</string>
    <string name="total_payment">Rp Total</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="transfer_info">Transfer Information</string>
    <string name="must_be_paid">Total that must be paid:</string>
    <string name="total_note">  Pay according to the nominal stated.</string>
    <string name="payment_method_note">Use MBangking / ATM to pay</string>
    <string name="bank_name_payment">Bank Name</string>
    <string name="bank_account_number_payment">Account Number :</string>
    <string name="the_bank_account_number_payment">The Account Number</string>
    <string name="payment_note">  Payment must be made at least 24 hours from order</string>
    <string name="copy">COPY</string>
    <string name="capture">Capture Icon</string>
    <string name="switch_icon">Switch Icon</string>
    <string name="payment_method_info">Payment method via MBangking</string>
    <string name="payment_step">1. Choose Transfer, add seller bank account number.\n2. Insert number you want to transfer.\n3. Check money you want to transfer is correct. \n4. Click Confirm, and insert your PIN number. \n5. After that print your transfer bill and upload it by clicking button upload below. \n6. Maximum proof of payment can be uploaded within 24 hours.</string>
    <string name="button_upload_bill">Upload Transfer Bill</string>
    <string name="classified_as">Instruction : Choose or capture one image of plant leaf and click submit button to detect disease</string>
    <string name="pick_one_picture">Pick One Picture</string>
    <string name="permission">No Permission Granted, Request Again!!</string>
    <string name="received">Has Been Received</string>
    <string name="arrived_status">Arrived Status</string>
    <string name="payment_status">Payment Status</string>
    <string name="tv_product_name">Product Name</string>
    <string name="tv_bank_name">Bank\'s Name</string>
    <string name="tv_bank_account_number">Bank Account Number</string>
    <string name="tv_id_ktp">Card Identity Number(id KTP)</string>
    <string name="placehold_stock">Total product you want to sell</string>
    <string name="placehold_size_stock">Size of your\'s product stock (ex: Kg)</string>
    <string name="placehold_price_add_product">Product price per-stock size</string>
    <string name="placehold_description_add_product">Description of your\'s product</string>
    <string name="btn_to_extended">Detect plant disease now!</string>
    <string name="des_detect_1">Ilustration of farmer who trimming plant</string>
    <string name="title_detect1">Take Photo of the leaves</string>
    <string name="title_detect2">Detect plant disease</string>
    <string name="title_detect3">Search for cure</string>
    <string name="description_detect1">Take a photo of that plant at the leaves section that indicate symtom of disease</string>
    <string name="description_detect2">Upload your\'s photo to our ML model to detect disease of that plant</string>
    <string name="description_detect3">Search for cure in internet and take care your plants more</string>
    <string name="product_price_per_stock_size">Product Price per Stock Size</string>
    <string name="total_product">Total Product</string>
    <string name="warning_register">Please choose an image first!!</string>
    <string name="hint_idKtp">NIK</string>
    <string name="register_user_success">Register User Success</string>
    <string name="msg_register_success">msg: You have Successfully created new account, next please login!</string>
    <string name="error_warning_register">Register Failed, connection error or your NIK already registered!!</string>
    <string name="tax_value">Rp. 2,500</string>
    <string name="amount_buy">Amount : %d %s</string>
    <string name="sum_all_buy">sum all buy</string>
    <string name="indicator_products_cost">Products cost</string>
    <string name="total_payment_history">Total Pembayaran:</string>
    <string name="purchase_buyer_history">List of sold Items</string>
    <string name="products_price_history">%s / %s</string>
    <string name="id_transaksi_history">Id Transaksi</string>
    <string name="detection_msg">Your plants condition classified as %s \n with confidence : %d percent</string>
    <string name="detection_alert_title">Result</string>
    <string name="sending_cost">Sending cost</string>
    <string name="account_number">1330023120941</string>
    <string name="clip_label">Seller Account Number</string>
    <string name="toast_indi_clip">Account Number Copied</string>
    <string name="choose_one_bill_image_first">Choose one bill image first</string>
    <string name="back">Icon Back</string>
    <string name="habis">Stock: EMPTY</string>
    <string name="home_search_hints">Search for products</string>
    <string name="warning_connection">Connection internet lost</string>
    <string name="watning_edit_product">Please select new picture for product</string>
    <string name="edit_data_success">Edit Data Success</string>
    <string name="total_buy">Total : %d %s</string>
    <string name="status_purcase">PAID</string>
    <string name="status_purcase2">UNPAID</string>
    <string name="status_purchase3">ARRIVED</string>
    <string name="status_purchase4">PENDING</string>
    <string name="chooser_pic">Choose a Picture</string>
    <string name="title_alert_up_bill">Bill Successfully Uploaded</string>
    <string name="des_alert_up_nill">Your transfer bill uploaded, data being updated</string>
    <string name="empty_warning_pname">Product name can\'t empty</string>
    <string name="empty_warning_bname">Bank name can\'t empty</string>
    <string name="empty_warning_bn">Bank account number can\'t empty</string>
    <string name="empty_warning_se">Stock can\'t empty</string>
    <string name="empty_warningss">Stock size can\'t empty</string>
    <string name="empty_warning_ps">Price can\'t empty</string>
    <string name="empty_warning_ds">Description can\'t empty</string>
    <string name="data_failed_to_be_shown">Data failed to be shown</string>
    <string name="nik_can_t_empty">NIK can\'t Empty</string>
    <string name="email_can_t_empty">Email can\'t empty</string>
    <string name="password_can_t_empty">Password can\'t empty</string>
    <string name="successfully_login">Successfully Login</string>
    <string name="password_or_email_wrong">Password or email wrong</string>
</resources>