<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.payment_steps.PaymentsStepFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/green700"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/transfer_info"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_must_be_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/must_be_paid"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_14sdp"/>
            <TextView
                android:id="@+id/tv_total_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_payment"
                android:textSize="@dimen/_24ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"/>
            <TextView
                android:id="@+id/tv_total_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_note"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/red"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@drawable/rectangle_stroke_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method_note"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/placeholder"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:elevation="@dimen/_2sdp"
                android:backgroundTint="@color/lightGrey"/>

            <TextView
                android:id="@+id/tv_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_name_payment"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"/>
            <TextView
                android:id="@+id/tv_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_account_number_payment"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_the_account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_bank_account_number_payment"
                    android:textSize="@dimen/_24ssp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_14sdp"/>

                <TextView
                    android:id="@+id/tv_copy_account_number"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/copy"
                    android:textColor="@color/green700"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_payment_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_note"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/red"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_17sdp"
                android:background="@drawable/rectangle_stroke_bg"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:elevation="@dimen/_2sdp"
                android:backgroundTint="@color/lightGrey"/>

            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method_info"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_11sdp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:elevation="@dimen/_2sdp"
                android:backgroundTint="@color/lightGrey"/>
            <TextView
                android:id="@+id/tv_payment_method_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_step"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"/>
            <Button
                android:id="@+id/btn_upload_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_transfer_bill"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/green700"
                android:layout_marginTop="@dimen/_39sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:layout_marginBottom="@dimen/_15sdp"/>
            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/green700"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:layout_marginBottom="@dimen/_15sdp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>