<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detection.DetectionExtended">

    <TextView
        android:id="@+id/tv_detection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/detection_title"
        android:textAlignment="center"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_detection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_273sdp"
        android:layout_margin="@dimen/_4sdp"
        android:outlineProvider="background"
        android:contentDescription="@string/plant_image"
        app:srcCompat="@drawable/image"
        app:layout_constraintTop_toBottomOf="@+id/tv_detection_title"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:backgroundTint="@color/green700"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detection" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/green700"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_gallery"
        app:layout_constraintTop_toBottomOf="@+id/iv_detection" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/green700"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detection"
        tools:layout_editor_absoluteX="21dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/classified_as"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"/>


</androidx.constraintlayout.widget.ConstraintLayout>