<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civImage"
        android:layout_width="@dimen/_178sdp"
        android:layout_height="@dimen/_178sdp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@drawable/circle_stroke_bg"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_24ssp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civImage"
        android:text="@string/hint_name" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:text="@string/hint_email" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:text="@string/hint_phone_number" />

    <ScrollView
        android:id="@+id/sv_address"
        android:layout_weight="94.5"
        android:paddingBottom="5dp"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_137sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:clipToPadding="true"
        android:textAlignment="textStart"
        android:background="@drawable/stroke_bg"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_purchase_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/hint_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
    </ScrollView>

    <Button
        android:id="@+id/btn_purchase_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_53sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/green700"
        android:text="@string/purchase_history"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_sales_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_address" />

    <Button
        android:id="@+id/btn_sales_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_53sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="16dp"
        android:text="@string/sales_history"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/green700"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/settings"
        android:text="@string/settings"
        android:textColor="@color/green700"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/logout"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/green700"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>